# ytscriptrs

./: .gitignore  .rustfmt.toml  Cargo.toml  app.py  data.py
.cargo/: config.toml
benches/: bench_par.rs
benchmarks/: Cargo.toml
crates/ytscriptrs/: Cargo.toml
crates/ytscriptrs/src/: main.rs
python/: chatbot.py
python/data/: download.py  edit_subs.py  summary.py
scripts/: split_line.sh
src/: lib.rs  main.rs
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
