[package]
name = "ytscriptrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
criterion = "0.4.0"
csv = "1.2.0"
once_cell = "1.17.1"
rayon = "1.6.1"
xml-rs = "0.8.4"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench_par"
harness = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true    # Automatically strip symbols from the binary.
opt-level = 3   # Optimize for speed.
# opt-level = "z"  # Optimize for size.
lto = true # Optimize at link time, & remove dead code. 
# lto = fat         # Optimize at link time, & remove dead code. 
incremental = true
debug = false      # production
# Reduce Parallel Code Generation Units to Increase Optimization
# By default, Cargo specifies 16 parallel codegen units for release builds. This improves compile times, but prevents some optimizations.
# Set this to 1 in Cargo.toml to allow for maximum size reduction optimizations:
codegen-units = 1
